# url-shortener

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.yml
.sqlx/: query-0599c12ada63c9b9aaa39d6384414a4f7449b26d989c8969468aa198ccc0e91e.json  query-0d92f20bc2b678c448d95f71cb60961ae5b560f7d56f9fcc07ead758b3162aec.json  query-299fd669e6846a8afa20237c8ea42486fc6d9188a7601bea14ffc771516d578b.json  query-33a27cff428c1bd06a8ccbe994ce8503b8442e29a3de17344a6c41724dd24399.json  query-3caf054994cbd965ae5154dbc8be0886aa4bbd701f02c5ab76e43dd92f31d53f.json  query-3f5313e34c71d2fe03d41a28a17279365956d034e5425bc68041a520e0d90950.json  query-5215fd5959dd407b1ccf07c183c27ee039e42139d1939091b8bfea872573ce33.json  query-64f2401d81a2874e44bad49a028feca6bc730ff5af2b144007debd072ffbc28a.json  query-6841282f3cd830582f83a1a246f0b95cc7e6edabb5aa83b0c975d45aed502f72.json  query-6b2c44d9c31c333020c58621e50ba832f912fc93e8286367e2d03fca151ed840.json  query-6c78e8260d9a98feb728eaa0bde7d23489315fc11351f1834a72fd3db7aa6a34.json  query-6fee6a0f15f8ba4bf8843b6267d6531618553f9a0d7b9b4f238e32df56490246.json  query-86dfab0f543e5c1176dd72fe179dfdb81579963e7b6f3a5a5126367a0c192ac3.json  query-8934a407ace3f481ad8bf670f7bc7b8ff984867e5e314143daf5b07da8fe7061.json  query-8e7f59036f07aaf48f22c7f0457f003d334230fd1b4e53375e74784576fb143e.json  query-9d7758f1d4f661ebb437e721acb23c90b9c2ade01b0aa14b7e1f254046cf6d91.json  query-a42cd94a597f459fc3fa7ed02d73de3044cfcb4f9c065daacc3936930eb5edb2.json  query-adcbf9fe5c88eee8277723ed0cf46af63c805065c7c4dec7844eb686d91530ab.json  query-b437b85ec0593e5056ffe8c95f44c16668ef53fb6ce2a06293df66e1f026effa.json  query-b8b138ed8b43862240acc4c3981c6517086d044fc8ad2f3da639f865ce61ea9c.json  query-b94ff7012b71e558aebe8f9cf037bb60ca2920a22b6731f118f9e12599969cb3.json  query-bca0db4bbffd6ca454325b9c2930b0cdd4ecb2cbead5092c908f7ae6d027e672.json  query-bfa6de05d9c5f3182b5ecf96da097bcccd14fba5d7602c36e40afacc8775bbf7.json  query-d0143a32f66cb13c051e1d00f8e79132d09e5866b9e621e6c786cbbbc97b6c63.json  query-d1af68484631cee68b538b4fdcecbac63c4b24bbb3e9caa97e5136c3d2081122.json  query-d5a651369013db41a00b36600537cfb73f3bed9ca1bf298cbd931b7217a36928.json  query-e07140ed6b90633abe472453444b18f5535a97da9dfc53ae9fe4388f98f49b4c.json  query-e3bfd75d288857aa490fd1bbc5b5bbee0c41884648246ffde1f495c7aa776c80.json
migrations/: 20260107104501_init.sql  20260107122107_add_clicks.sql  20260109095531_add_link_clicks.sql  20260109171444_create_api_tokens.sql  20260116180630_alter_link_clicks_ip.sql  20260117081049_domains.sql  20260228000000_link_expiry_and_redirect.sql  20260228000001_domain_soft_delete.sql
src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  server.rs  state.rs
src/api/: mod.rs  routes.rs
src/application/: mod.rs
src/domain/: click_event.rs  click_worker.rs  mod.rs
src/dto/: clicks.rs  mod.rs  shorten.rs  stats.rs  stats_list.rs
src/handlers/: mod.rs  redirect.rs  shorten.rs  stats.rs  stats_list.rs
src/infrastructure/: mod.rs
src/middlewares/: access_log.rs
src/utils/: code_generator.rs  codegen.rs  db_error.rs  extract_domain.rs  mod.rs  url_norm.rs  url_normalizer.rs
src/web/: mod.rs  (+1 more)
tests/: handler_domains.rs  handler_health.rs  handler_links.rs  handler_redirect.rs  handler_shorten.rs  handler_stats.rs  repository_domain.rs  repository_link.rs  repository_stats.rs  repository_token.rs
(+62 files in other folders)
