[package]
name = "mcz-url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio", "postgres", "macros", "tls-rustls", "chrono", "ipnetwork"
]}
url = "2"
anyhow = "1.0.100"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9.2"
base64 = "0.22.1"
rand_core = "0.9.3"
serde_json = "1.0.149"
ipnetwork = "0.20.0"
