[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"
authors = ["Artyom Chernyakov <chernyakov@decanet.ru>"]
description = "A fast and secure URL shortener service built with Axum and PostgreSQL"
license = "MIT"
repository = "https://github.com/bobrynya/url-shortener"
readme = "README.md"
keywords = ["url", "shortener", "web", "axum", "postgres"]
categories = ["web-programming"]
rust-version = "1.93"
default-run = "url-shortener"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.test]
inherits = "dev"

[dependencies]
# Core async
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
async-trait = "0.1.89"
tokio-retry = "0.3.0"

# Web framework
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "tokio", "json"] }
tower = { version = "0.5.3", default-features = false }
tower-http = { version = "0.6.8", default-features = false, features = ["fs", "trace", "normalize-path"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
governor = "0.10.4"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "postgres", "macros", "tls-rustls", "chrono", "ipnetwork", "migrate"
]}
redis = { version = "1.0.2", default-features = false, features = ["tokio-comp", "connection-manager", "json"] }

# Serialization
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16"

# Validation
validator = { version = "0.20", features = ["derive"] }
url = "2"
regex = "1.12"

# Utilities
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Security
axum-auth = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = { version = "0.9", features = ["std", "std_rng"] }
getrandom = "0.4"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "json"] }
metrics = "0.24"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Config
dotenvy = "0.15"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.12"
colored = "3.1"

# Templates
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8", "tracing-0.1"] }

[dev-dependencies]
# HTTP testing for Axum
axum-test = "18"
tower = { version = "0.5", features = ["util"] }

# Mock framework
mockall = "0.14"

# Test database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }

# Test
serial_test = "3"
